# machine-learning

./: .gitignore  pyproject.toml  requirements.txt
data/database/: chatbot.pkl  chatlocaldb.sqlite3
predictive/classification/: base_chatbot.ipynb  base_credit.ipynb  base_credit_risk.ipynb  config.py  credit_risk.ipynb  credit_risk.py  etl.ipynb  results.ipynb
predictive/classification/decision_tree/: base_chatbot.ipynb  base_credit.ipynb  base_credit_risk.ipynb  formulas.xlsx
predictive/classification/decision_tree/random_forest/: base_census.ipynb  base_credit.ipynb
predictive/classification/knn/: base_credit.ipynb  calc.ipynb  census.ipynb  credit.ipynb
predictive/classification/logistic_regression/: calc.ipynb
predictive/classification/naive_bayes/: base_credit.ipynb  base_credit_risk.ipynb  chatbot_data.ipynb  tabela_de_probabilidade.xlsx
predictive/classification/rules/OneR/: base_census.ipynb  credit_base.ipynb  credit_data.ipynb  credit_risk.ipynb
