[tool.poetry]
name = "machine-learn"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
python-decouple = "^3.8"
pyarrow = "^15.0.0"
icecream = "^2.1.3"
ipykernel = "^6.29.2"
jupyterlab = "^4.1.2"
notebook = "^7.1.0"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
